# py-wg

./: .gitignore  .style.yapf  LICENSE  README.md  pyproject.toml  run_tests.py
.github/workflows/: testing.yml  tests.yml
examples/: .env-template  README.md  icmp-round-trip.py  load_environ.py  scapy-icmp6.py  syn-scan.py  udp-dns-round-trip.py  utils.py
src/wireguard/: __init__.py  constants.py  exceptions.py  functions.py  handshake.py  keypair.py  packet_replay.py  tai64n.py  wireguard.py
src/wireguard/stack/: checksum.py  icmp.py  internet.py  internet_checksum.py  internet_protocols.py  ip.py  ip_version.py  ipv4.py  ipv6.py  protocols.py  registry.py  tcp.py  udp.py
src/wireguard/stack/tcp/: __init__.py  tcp_fsm.py  tcp_opt.py  tcp_pkt.py
tests/: test_suite.py  unit_icmp.py  unit_internet_checksum.py  unit_ipv4.py  unit_tcp.py  unit_udp.py  unit_wireguard.py  utilities.py
