[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "wireguard-protocol"
version = "0.0.7"
authors = [
	{ name="rafa_br34", email="rafa_br34@exulan.com.au" },
]
description = "A pure Python implementation of WireGuard"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
	"Operating System :: OS Independent",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Intended Audience :: Science/Research",
	"Intended Audience :: Telecommunications Industry",
	"Intended Audience :: System Administrators",
	"Intended Audience :: Developers",
	"Development Status :: 3 - Alpha",
	"Natural Language :: English",
	"Topic :: Communications",
	"Topic :: Internet",
	"Topic :: Security",
	"Topic :: Security :: Cryptography",
	"Topic :: Utilities",
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = ["pynacl>=1.5.0"]

[project.urls]
Homepage = "https://github.com/rafa-br34/py-wg"
Issues = "https://github.com/rafa-br34/py-wg/issues"